# Envuru

./: .gitignore  Cargo.toml  README.md  compile_shaders.py
resources/shaders/: demo.vert  line.frag  object.frag  texture.frag  voxel.frag  voxel.geom  voxel.vert
src/: main.rs
src/engine/: api_resources.rs  controller.rs  memory.rs  mod.rs  pipeline.rs  scene.rs  shader.rs  swapchain.rs  utils.rs
